[package]
name = "sortby"
version = "0.1.3"
edition = "2018"

license = "MIT"
repository = "https://github.com/sklose/sortby-rs"
keywords = ["iterator", "data-structure", "sort", "sort-by"]
categories = ["algorithms", "rust-patterns"]
description = "adds convenient sort functions for Iterators"
authors = ["Sebastian Klose <mail@sklose.com>"]
readme = "README.md"